...
        configureUI()
        accessibility()
    }
    
    private func accessibility(){
        self.view.isAccessibilityElement = true
        self.view.accessibilityLabel = "KQHomeViewController"
        tableView.accessibilityIdentifier = "HomeTableView"
        tableView.isAccessibilityElement = true
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        self.tableView.isHidden = true
...
